[package]
name = "pcom"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
clap = { git = "https://github.com/clap-rs/clap" }
hashbrown = "0.11.2"
image = "0.23.14"
# img_hash = "3.2.0"
img_hash = { git = "https://github.com/archer884/img_hash" }
rayon = "1.5.1"
