[package]
name = "vdiff"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.1.14", features = ["derive"] }
hashbrown = "0.12.0"
image = "0.24.2"
rayon = "1.5.2"
visual-hash = "3.3.2"
